Removed fixes positioning on sidebar for short screens so it doesnt get cut off

--- a/course-source/design-06/styles.css
+++ b/course-source/design-06/styles.css
@@ -575,6 +575,13 @@ h2 svg {
   }
 }
 
+@media (max-height: 820px) {
+  .pdp-layout aside .pdp-aside-inner {
+    position: relative;
+    top: 0;
+  }
+}
+
 article {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
